--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         </div>
         <div class="btns-block">
             <div class="d-flex align-items-center mb-2">
-                <a href="#" class="btn btn-calc btn-operator">MC</a>
-                <a href="#" class="btn btn-calc btn-operator">MR</a>
+                <a href="#" class="btn btn-calc btn-m-clear">MC</a>
+                <a href="#" class="btn btn-calc btn-m-recall">MR</a>
                 <a href="#" class="btn btn-calc btn-clear">C</a>
                 <a href="#" class="btn btn-calc btn-operator"></a>
             </div>
             <div class="d-flex align-items-center mb-2">
-                <a href="#" class="btn btn-calc btn-operator">M+</a>
-                <a href="#" class="btn btn-calc btn-operator">M-</a>
-                <a href="#" class="btn btn-calc btn-operator">MS</a>
+                <a href="#" class="btn btn-calc btn-m-plus">M+</a>
+                <a href="#" class="btn btn-calc btn-m-minus">M-</a>
+                <a href="#" class="btn btn-calc ">MS</a>
                 <a href="#" class="btn btn-calc btn-operator"></a>
             </div>
             <div class="d-flex align-items-center mb-2">
