--- a/index.html
+++ b/index.html
@@ -19,16 +19,10 @@
         </div>
         <div class="btns-block">
             <div class="d-flex align-items-center mb-2">
+                <a href="#" class="btn btn-calc btn-m btn-m-plus">M+</a>
+                <a href="#" class="btn btn-calc btn-m btn-m-minus">M-</a>
                 <a href="#" class="btn btn-calc btn-m-clear">MC</a>
                 <a href="#" class="btn btn-calc btn-m-recall">MR</a>
-                <a href="#" class="btn btn-calc btn-clear">C</a>
-                <a href="#" class="btn btn-calc btn-operator"></a>
-            </div>
-            <div class="d-flex align-items-center mb-2">
-                <a href="#" class="btn btn-calc btn-m-plus">M+</a>
-                <a href="#" class="btn btn-calc btn-m-minus">M-</a>
-                <a href="#" class="btn btn-calc ">MS</a>
-                <a href="#" class="btn btn-calc btn-operator"></a>
             </div>
             <div class="d-flex align-items-center mb-2">
                 <a href="#" class="btn btn-calc btn-operator plus">+</a>
@@ -36,13 +30,14 @@
                 <a href="#" class="btn btn-calc btn-operator multiplication">*</a>
                 <a href="#" class="btn btn-calc btn-operator division">/</a>
             </div>
+            <div class="d-flex align-items-center mb-2">
+                <a href="#" class="btn btn-calc number">7</a>
+                <a href="#" class="btn btn-calc number">8</a>
+                <a href="#" class="btn btn-calc number">9</a>
+                <a href="#" class="btn btn-calc btn-clear">C</a>
+            </div>
             <div class="d-flex">
                 <div>
-                    <div class="d-flex align-items-center mb-2">
-                        <a href="#" class="btn btn-calc number">7</a>
-                        <a href="#" class="btn btn-calc number">8</a>
-                        <a href="#" class="btn btn-calc number">9</a>
-                    </div>
                     <div class="d-flex align-items-center mb-2">
                         <a href="#" class="btn btn-calc number">4</a>
                         <a href="#" class="btn btn-calc number">5</a>
